--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,16 @@ header{
     width: auto;
 }
 
+#modalRegistro h5{
+    color: #9c7777;
+}
+
+/* #modalRegsite{
+    color: #9c7777;
+}
+ */
+
+
 .secoes{
     width: 50px;
     width: 100%;
